# Effective-Mobile

./: .env.template  README.md  app_log.py  pyproject.toml
alembic/: env.py
src/: .env.template  config.py  gen.py  main.py  run.py
src/alembic/: env.py
src/alembic/versions/: 2026_03_23_1302-5b77a65b05b3_init.py  2026_03_25_1300-bda0718163d1_add_table_role.py  2026_03_25_1619-7f2f0b7d724c_init.py
src/api/: __init__.py
src/api/router/: __init__.py  auth.py
src/api/v1/: __init__.py  dependencies.py  encoder.py
src/api/v1/router/: auth.py  user.py
src/core/: config.py
src/core/models/: __init__.py  base.py  db_helper.py  role.py  user.py
src/core/schemas/: __init__.py  token.py  user.py
